--- a/.github/workflows/react-cd.yaml
+++ b/.github/workflows/react-cd.yaml
@@ -1,4 +1,4 @@
-name: rmb-react-bucky
+name: Deploy Vite React App to AWS S3
 
 on:
   push:
@@ -41,4 +41,4 @@ jobs:
 
       - name: Sync build directory to S3
         run: |
-          aws s3 sync ./react/dist s3://the-sock-exchange-react --delete
+          aws s3 sync ./react/dist s3://rmb-react-bucky --delete
